--- a/Watchlist/app/src/main/res/drawable/done_track_movie_btn.xml
+++ b/Watchlist/app/src/main/res/drawable/done_track_movie_btn.xml
@@ -1,5 +1,5 @@
 <vector android:height="100dp" android:viewportHeight="24"
     android:viewportWidth="24" android:width="100dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#3cdb7f" android:pathData="M12,12m-10.75,0a10.75,10.75 0,1 1,21.5 0a10.75,10.75 0,1 1,-21.5 0"/>
-    <path android:fillColor="#f4f4f4" android:pathData="m10,16.75h-0.053a0.753,0.753 0,0 1,-0.547 -0.3l-3,-4a0.75,0.75 0,0 1,1.2 -0.9l2.482,3.308 6.388,-6.388a0.75,0.75 0,0 1,1.06 1.06l-7,7a0.746,0.746 0,0 1,-0.53 0.22z"/>
+    <path android:fillColor="#3cff22" android:pathData="M6,1.25L18,1.25A4.75,4.75 0,0 1,22.75 6L22.75,18A4.75,4.75 0,0 1,18 22.75L6,22.75A4.75,4.75 0,0 1,1.25 18L1.25,6A4.75,4.75 0,0 1,6 1.25z"/>
+    <path android:fillColor="#ffffff" android:pathData="m10.667,15.667a0.991,0.991 0,0 1,-0.707 -0.293l-2.667,-2.667a1,1 0,1 1,1.414 -1.414l1.96,1.959 4.626,-4.626a1,1 0,0 1,1.414 1.415l-5.333,5.333a0.991,0.991 0,0 1,-0.707 0.293z"/>
 </vector>
